# cosmo-downloader

./: .env.mac.local.example  .gitignore  CMakeLists.txt  DISCLAIMER.md  FAQ.md  LICENSE  PRIVACY.md  README.md  TERMS.md  TROUBLESHOOTING.md  electron-builder.yml  electron.vite.config.ts  eslint.config.mjs  package-lock.json  package.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.web.json  tsconfig.web.tsbuildinfo  vitest.config.ts
.github/workflows/: release.yml
docs/: BUILD_FROM_SOURCE.md  CHANGELOG.md  DISCLAIMER.md  FAQ.md  PRIVACY.md  TERMS.md  TROUBLESHOOTING.md
scripts/: build-linux-local.mjs  build-mac-local.mjs  build-mac-release.mjs  build-windows-local.mjs  custom-mac-sign.mjs  download-binaries.mjs  extract-release-notes.mjs  generate-iconify-subset.mjs  notarize-mac-app.mjs  patch-electron-builder-nsis.mjs  preflight-windows-symlink.mjs  prepare-mac-signing.mjs  release-public.mjs  require-windows-signing-env.mjs  verify-linux-package.mjs  verify-mac-package.mjs  verify-windows-signing.mjs
src/: Main.cpp
src/App/: Application.cpp  Application.h
src/Core/: WindowManager.cpp  WindowManager.h  WindowProc.cpp  WindowProc.h
src/Utils/: BrowserDetector.cpp  BrowserDetector.h  Clipboard.cpp  Clipboard.h  ExecutableResolver.cpp  ExecutableResolver.h  FFmpegRunner.cpp  FFmpegRunner.h  FolderDialog.cpp  FolderDialog.h  NotificationService.cpp  NotificationService.h  SystemSettings.cpp  SystemSettings.h  Utils.h  YtDlpRunner.cpp  YtDlpRunner.h
src/WebView/: WebMessageHandler.cpp  WebMessageHandler.h  WebViewManager.cpp  WebViewManager.h
src/main/: appIdentity.ts  index.ts  smokeTest.ts
src/main/ipc/: registerIpc.ts
src/main/services/: binaryService.ts  browserDetector.test.ts  browserDetector.ts  cacheBudgetCoordinator.ts  downloadService.test.ts  downloadService.ts  filename.test.ts  filename.ts  formatPlanner.test.ts  formatPlanner.ts  historyService.test.ts  historyService.ts  launchUpdateOrchestrator.ts  logCompactionService.ts  logService.test.ts  logService.ts  mediaProbe.test.ts  mediaProbe.ts  progressParser.test.ts  progressParser.ts  queueService.test.ts  queueService.ts  scrubPreviewService.ts  settingsService.test.ts  settingsService.ts  splashController.ts  splashPreview.ts  thumbnailService.ts  updateNotifier.ts  updateNotifierHelpers.ts  updateService.test.ts  updateService.ts  videoMetadataCoordinator.ts  videoMetadataService.test.ts  videoMetadataService.ts
src/main/utils/: ipcResult.ts  jsonFileState.ts  process.test.ts  process.ts
src/main/windows/: splashWindow.ts
src/preload/: index.d.ts  index.ts
src/renderer/: index.html  splash.html
src/renderer/src/: App.tsx  globals.css  main.tsx
src/shared/: defaults.test.ts  defaults.ts  exportCompatibility.ts  formatOptions.ts  historyEntryCapabilities.ts  ipc.ts  logCompaction.ts  queueModel.test.ts  queueModel.ts  trim.test.ts  trim.ts  types.ts  url.test.ts  url.ts
tests/main/: smokeTest.test.ts
tests/main/services/: browserDetector.test.ts  cacheBudgetCoordinator.test.ts  downloadService.test.ts  filename.test.ts  formatPlanner.test.ts  historyService.test.ts  launchUpdateOrchestrator.test.ts  logCompactionService.test.ts  logService.test.ts  mediaProbe.test.ts  progressParser.test.ts  queueService.test.ts  scrubPreviewService.test.ts  settingsService.test.ts  updateNotifier.test.ts  updateService.test.ts  videoMetadataCoordinator.test.ts  videoMetadataFetch.test.ts  (+1 more)
tests/scripts/: build-linux-local.test.ts  build-mac-local.test.ts  build-mac-release.test.ts  build-windows-local.test.ts  download-binaries.test.ts  extract-release-notes.test.ts  notarize-mac-app.test.ts  preflight-windows-symlink.test.ts  prepare-mac-signing.test.ts  release-public.test.ts  require-windows-signing-env.test.ts  verify-linux-package.test.ts  verify-mac-package.test.ts  verify-windows-signing.test.ts
tests/shared/: defaults.test.ts  exportCompatibility.test.ts  logCompaction.test.ts  queueModel.test.ts  trim.test.ts  url.test.ts
ui/: index.html  package-lock.json  package.json  tsconfig.app.json
ui/src/: App.tsx  globals.css
ui/src/lib/: webview.ts
(+177 files in other folders)
